Enhance test structure and improve code readability

--- a/src/main/resources/configManager.properties
+++ b/src/main/resources/configManager.properties
@@ -4,7 +4,7 @@ appium.url=http://127.0.0.1:4723/
 
 
 # paths
-main.js.path=C:\\Users\\Mahmoud\\node_modules\\appium-uiautomator2-driver\\node_modules\\resolve\\test\\resolver\\without_basedir\\main.js
+main.js.path=C:\\Users\\Mahmoud\\AppData\\Roaming\\npm\\node_modules\\appium\\build\\lib\\main.js
 ip.address=127.0.0.1
 port.number=4723
 
@@ -12,4 +12,6 @@ port.number=4723
 # Capabilities
 device.name=phone1
 app.path=E:\\TESTING\\AutomationProjects\\appiumTwo\\src\\test\\resources\\Android.SauceLabs.Mobile.Sample.app.2.3.0.apk
-
+app.platformName=Android
+app.automationName=UiAutomator2
+app.activity=com.swaglabsmobileapp.*
